@@ -1,7 +1,7 @@
 package dev.ted.supermarket.application;
 
 import java.math.BigDecimal;
-import java.util.Collections;
+import java.util.List;
 
 public class CartService {
 
@@ -9,6 +9,7 @@ public class CartService {
 
     private BigDecimal total = BigDecimal.ZERO;
     private boolean isEmpty = true;
+    private String upc;
 
     public CartService(ProductPricer productPricer) {
         this.productPricer = productPricer;
@@ -19,13 +20,14 @@ public class CartService {
     }
 
     public void addProduct(String upc) {
+        this.upc = upc;
         total = total.add(productPricer.priceFor(upc));
         isEmpty = false;
     }
 
     public Receipt finalizeOrder() {
         requireCartNotEmpty();
-        Receipt receipt = new Receipt(total, Collections.emptyList());
+        Receipt receipt = new Receipt(total, List.of(upc));
         total = BigDecimal.ZERO;
         isEmpty = true;
         return receipt;
